--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="../3-column-preview-card/css/main.css">
 </head>
 <body >
     <div class="orange">
-        <img src="/images/icon-sedans.svg" alt="Sedan car icon">
+        <img src="../3-column-preview-card/images/icon-sedans.svg" alt="Sedan car icon">
         <header>SEDANS</header>
         <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising inn the city or on your next road trip.</p>
         <button type="button">Learn More</button>
     </div>
     <div class="blue">
-        <img src="/images/icon-suvs.svg" alt="SUVS car icon">
+        <img src="../3-column-preview-card/images/icon-suvs.svg" alt="SUVS car icon">
         <header>SUVS</header>
         <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
         <button type="button">Learn More</button>
     </div>
     <div class="green">
-        <img src="/images/icon-luxury.svg" alt="luxury car icon">
+        <img src="../3-column-preview-card/images/icon-luxury.svg" alt="luxury car icon">
         <header>LUXURY</header>
         <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
         <button type="button">Learn More</button>
