--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body >
     <div class="orange">
-        <img src="../3-column-preview-card/images/icon-sedans.svg" alt="Sedan car icon">
+        <img src="/3-column-preview-card/images/icon-sedans.svg" alt="Sedan car icon">
         <header>SEDANS</header>
         <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising inn the city or on your next road trip.</p>
         <button type="button">Learn More</button>
     </div>
     <div class="blue">
-        <img src="../3-column-preview-card/images/icon-suvs.svg" alt="SUVS car icon">
+        <img src="/3-column-preview-card/images/icon-suvs.svg" alt="SUVS car icon">
         <header>SUVS</header>
         <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
         <button type="button">Learn More</button>
     </div>
     <div class="green">
-        <img src="../3-column-preview-card/images/icon-luxury.svg" alt="luxury car icon">
+        <img src="/3-column-preview-card/images/icon-luxury.svg" alt="luxury car icon">
         <header>LUXURY</header>
         <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
         <button type="button">Learn More</button>
